get rid of Chrome play sound error message

--- a/project-graph.html
+++ b/project-graph.html
@@ -50,7 +50,7 @@
 </div>
 <br>
 
-<div id="side-pane" style="width:20%; display:inline-block; vertical-align:top; margin-left:10px;">
+<div id="side-pane" style="width:20%; display:none; vertical-align:top; margin-left:10px;">
 	<div lang="ZH">
 	<label>工作名称：</label><br>
 	<input type="text" id="TaskNameZH" value="" oninput="changeTaskNameZH(this)"><br>
