extract Git authors

--- a/project-graph.html
+++ b/project-graph.html
@@ -82,8 +82,8 @@
 	<label disabled>Expected # workers</label>
 	<input type="number" id="ExpWorkers" style="width:4em;" disabled><br>
 
-	<label disabled>Git references:</label><br>
-	<textarea rows="5" width="25%" id="gitRefs" disabled>
+	<label>Git authors:</label><br>
+	<textarea rows="5" width="25%" id="gitRefs">
 	</textarea>
 </div>
 
