add authors per task

--- a/project-graph.html
+++ b/project-graph.html
@@ -82,9 +82,8 @@
 	<label disabled>Expected # workers</label>
 	<input type="number" id="ExpWorkers" style="width:4em;" disabled><br>
 
-	<label>Git authors:</label><br>
-	<textarea rows="5" width="25%" id="gitRefs">
-	</textarea>
+	<label>Authors:</label><br>
+	<div id="authors" style="width=15%;"></div>
 </div>
 
 <div id="viz" style="display:inline-block; margin-left:20%; margin:10px; border:1px solid Black;">height:900px;</div>
@@ -99,6 +98,7 @@
 		<option value="none">---</option>
 		<option value="DAO-project-graph.json">DAO-project-graph.json</option>
 		<option value="AGI-project-graph.json">AGI-project-graph.json</option>
+		<option value="DeepSales-project-graph.json">DeepSales-project-graph.json</option>
 	</select>
 	<br>
 	<br>
