voting in project-graph, unfinished

--- a/project-graph.html
+++ b/project-graph.html
@@ -88,6 +88,8 @@
 
 <div id="viz" style="display:inline-block; margin-left:20%; margin:10px; border:1px solid Black;">height:900px;</div>
 
+<div id="voting"></div>
+
 <!-- Modal Window for inputting JSON file names -->
 <div id="modalWindow1" class="modal">
 	<div class="modal-content">
