--- a/vote-slider.html
+++ b/vote-slider.html
@@ -5,45 +5,45 @@
 </head>
 
 <body>
-<div class="slidecontainer2">
+<div class="slidecontainer">
 	<p class="name">Claris</p>
-	<pre class="score2">0</pre>
-	<input type="range" min="0" max="1000" value="0" class="slider2" id="0">
+	<pre class="score">0</pre>
+	<input type="range" min="0" max="1000" value="0" class="slider">
 </div>
 
-<div class="slidecontainer2">
+<div class="slidecontainer">
 	<p class="name">Abeer</p>
-	<pre class="score2">0</pre>
-	<input type="range" min="0" max="1000" value="0" class="slider2" id="1">
+	<pre class="score">0</pre>
+	<input type="range" min="0" max="1000" value="0" class="slider">
 </div>
 
-<div class="slidecontainer2">
+<div class="slidecontainer">
 	<p class="name">Pete</p>
-	<pre class="score2">0</pre>
-	<input type="range" min="0" max="1000" value="0" class="slider2" id="2">
+	<pre class="score">0</pre>
+	<input type="range" min="0" max="1000" value="0" class="slider">
 </div>
 
-<div class="slidecontainer2">
+<div class="slidecontainer">
 	<p class="name">Eric</p>
-	<pre class="score2">0</pre>
-	<input type="range" min="0" max="1000" value="0" class="slider2" id="3">
+	<pre class="score">0</pre>
+	<input type="range" min="0" max="1000" value="0" class="slider">
 </div>
 
-<div class="slidecontainer2">
+<div class="slidecontainer">
 	<p class="name">YKY</p>
-	<pre class="score2">0</pre>
-	<input type="range" min="0" max="1000" value="0" class="slider2" id="4">
+	<pre class="score">0</pre>
+	<input type="range" min="0" max="1000" value="0" class="slider">
 </div>
 
-<div class="slidecontainer2">
+<div class="slidecontainer">
 	<p class="name">Roger</p>
-	<pre class="score2">0</pre>
-	<input type="range" min="0" max="1000" value="0" class="slider2" id="5">
+	<pre class="score">0</pre>
+	<input type="range" min="0" max="1000" value="0" class="slider">
 </div>
 
-<div class="slidecontainer2">
+<div class="slidecontainer">
 	<p class="name">Total</p>
-	<pre class="score2" id="total2">0</pre>
+	<pre class="score" id="total">0</pre>
 </div>
 </body>
 <script src="js/vote-slider.js" defer></script>
