--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-project-graph.html
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>index.html</title>
+     <meta charset="UTF-8" />
+     <meta http-equiv="refresh" content="1; URL=project-graph.html" />
+   </head>
+   <body>
+     <p>Redirecting to <a href="project-graph.html">project-graph.html</a>....</p>
+   </body>
+</html>
