HTML layout, minor

--- a/project-graph.html
+++ b/project-graph.html
@@ -60,8 +60,9 @@
 </div>
 <br>
 
-<!-- for displaying project graph using Vis.js -->
-<div id="viz""></div>
+<!-- for displaying project graph using Vis.js, its size is controlled
+by the function toggleSidePane() in project-graph.js -->
+<div id="viz"></div>
 
 <!-- side panel for input data -->
 <div id="side-pane" style="width:25%; display:none; vertical-align:top; margin-left:10px; border:1px solid Black; background-color: White; padding: 5px;">
