--- a/project-graph.html
+++ b/project-graph.html
@@ -38,9 +38,9 @@
 		<td><button onclick="help()">🛈</button>
 		<td><button id="lang" value="ZH" onclick="switchLang()" style="font-size:17px;">Eng</button>
 		<td><button onclick="loadJSON()">🖹⮥</button>
-		<td><button onclick="saveJSON()">↳🖹</button>
+		<td><button onclick="saveJSON()"><span style="color:red;">↳🖹</span></button>
 		<td><button onclick="loadDirectory()">🖹⮥</button>
-		<td><button onclick="saveDirectory()">↳🖹</button>
+		<td><button onclick="saveDirectory()"><span style="color:red;">↳🖹</span></button>
 		<td><button onclick="clearGraph()"><span style="color:red;">🗑</span></button>
 		<td><button onclick="addNode()">+Ⓝ</button>
 		<td><button onclick="delNode()"><span style="color:red;">✕Ⓝ</span></button>
@@ -66,11 +66,11 @@ by the function toggleSidePane() in project-graph.js -->
 <!-- side panel for input data -->
 <div id="side-pane" style="width:25%; display:none; vertical-align:top; margin-left:10px; border:1px solid Black; background-color: White; padding: 5px;">
 	<div lang="ZH">
-	<label>工作名称：</label><br>
+	<label>工作名称（中文）：</label><br>
 	<input type="text" id="TaskNameZH" value="" oninput="changeTaskNameZH(this)"><br>
 	</div>
 
-	<label>Task name:</label><br>
+	<label>Task name (English):</label><br>
 	<input type="text" id="TaskNameEN" value="" oninput="changeTaskNameEN(this)"><br>
 
 	<label>Status:</label><br>
@@ -175,10 +175,13 @@ by the function toggleSidePane() in project-graph.js -->
 <!-- "Help" as a modal window -->
 <div id="Help_modal" class="modal">
 	<div class="modal-content">
-	<span class="close" onclick="close_help_modal()">⮽</span>
-	<p lang="ZH">欢迎。 可以试试 load JSON 选择某项目。</p>
-	<p lang="EN">Welcome.  You may try "load JSON" and choose a project.</p>
+	<div class="close" onclick="close_help_modal()">⮽</div>
+	<h2 lang="ZH">欢迎使用 COCO</h2>
+	<p lang="ZH">可以试试 load JSON 选择某项目。</p>
 	<p lang="ZH">To link Nodes：用滑鼠先后点击 nodes ① &amp; ②，然后按钮将它们连接。</p>
+
+	<h1 lang="EN">Welcome to COCO</h1>
+	<p lang="EN">You may try "load JSON" and choose a project.</p>
 	<p lang="EN">To link Nodes: Mouse click on nodes ① &amp; then ②, then click button to link them.</p>
 	</div>
 </div>
