--- a/project-graph.html
+++ b/project-graph.html
@@ -151,6 +151,8 @@ by the function toggleSidePane() in project-graph.js -->
 	<div id="remote-user" style="display:none">
 		<label>You're on machine: ???</label><br>
 		<label>Please select a user-identifier:</label><br>
+		<input type="radio" name="remoteUser" id="global" value="">
+		<label for="global">global</label><br>
 		<input type="radio" name="remoteUser" id="tester" value="tester">
 		<label for="tester">tester</label><br>
 		<input type="radio" name="remoteUser" id="Alvin" value="Alvin">
