fix tag with dot bug

--- a/project-graph.html
+++ b/project-graph.html
@@ -153,13 +153,13 @@ by the function toggleSidePane() in project-graph.js -->
 		<label>Please select a user-identifier:</label><br>
 		<input type="radio" name="remoteUser" id="global" value="">
 		<label for="global">global</label><br>
-		<input type="radio" name="remoteUser" id="tester" value="tester">
+		<input type="radio" name="remoteUser" id="tester" value=".tester">
 		<label for="tester">tester</label><br>
-		<input type="radio" name="remoteUser" id="Alvin" value="Alvin">
+		<input type="radio" name="remoteUser" id="Alvin" value=".Alvin">
 		<label for="Alvin">Alvin</label><br>
-		<input type="radio" name="remoteUser" id="Sherry" value="Sherry">
+		<input type="radio" name="remoteUser" id="Sherry" value=".Sherry">
 		<label for="Sherry">Sherry</label><br>
-		<input type="radio" name="remoteUser" id="YKY" value="YKY">
+		<input type="radio" name="remoteUser" id="YKY" value=".YKY">
 		<label for="YKY">YKY</label><br>
 		<br>
 	</div>
