--- a/technical-white-paper-EN.html
+++ b/technical-white-paper-EN.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Snow Crossing -- technical white paper</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/vote-slider.css">
+	<link rel="stylesheet" type="text/css" href="css/voting.css">
 	<link rel="stylesheet" type="text/css" href="css/file-map.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/config/TeX-MML-AM_CHTML.js"></script>
@@ -265,7 +265,7 @@ and click button.</p>
 
 <iframe id="viz" src="http://127.0.0.1:8050" style="height:1000px; width:100%; border: none;"></iframe>
 
-<script src="js/vote-slider.js"></script>
+<script src="js/voting.js"></script>
 <script src="js/file-map.js"></script>
 </body>
 </html>
