--- a/technical-white-paper.html
+++ b/technical-white-paper.html
@@ -34,7 +34,7 @@
 </ul>
 
 <p>这是 投票 demo，它会自动将总数调至 100%：</p>
-<iframe src="vote-slider.html" style="width:100%; height:300px; border:none;"></iframe>
+<iframe src="voting.html" style="width:100%; height:300px; border:none;"></iframe>
 <br>
 
 <hr>
