--- a/voting.html
+++ b/voting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/vote-slider.css">
+	<link rel="stylesheet" type="text/css" href="css/voting.css">
 </head>
 
 <body>
@@ -46,5 +46,5 @@
 	<pre class="score" id="total">0</pre>
 </div>
 </body>
-<script src="js/vote-slider.js" defer></script>
+<script src="js/voting.js" defer></script>
 </html>
