--- a/business-plan.html
+++ b/business-plan.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Crossing the Snow -- business plan</title>
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/vote-slider.css">
+	<link rel="stylesheet" type="text/css" href="css/voting.css">
 	<link rel="stylesheet" type="text/css" href="css/file-map.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="js/language-switcher.js" defer></script>
@@ -196,7 +196,7 @@
 	<pre class="score2" id="total2">0</pre>
 </div>
 <br>
-<script src="js/vote-slider.js"></script>
+<script src="js/voting.js"></script>
 
 <hr>
 
