--- a/project-graph.html
+++ b/project-graph.html
@@ -18,7 +18,7 @@
 <div id="container">
 
 <!-- top row of Graph Editing buttons -->
-<div style="display:inline-block; float:right">
+<div style="display:inline-block; float:right; background-color:White">
 <table>
 <tr style="text-align:center; height:14px; line-height:50%">
 		<td></td>
