able to display help pages, with full height, bilingually

--- a/help1.html
+++ b/help1.html
@@ -1,4 +1,8 @@
 <html>
+<head>
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="application/javascript" src="js/bilingual.js" defer></script>
+</head>
 <body>
 <h2 lang="ZH">欢迎使用 COCO</h2>
 <a href="#AddUsers">Add users</a><br>
