--- a/project-graph.html
+++ b/project-graph.html
@@ -197,8 +197,7 @@ by the function toggleSidePane() in project-graph.js -->
 <div id="Help_modal" class="modal">
 	<div class="modal-content">
 	<div class="close" onclick="close_help_modal()">⮽</div>
-	<iframe src="help1.html" onload='resizeIframe(this)' frameborder="0"
-		scrolling="no" ></iframe>
+	<iframe id="helpFrame" src="help1.html" onload='resizeIframe(this)' frameborder="0" scrolling="no" style="width:100%"></iframe>
 	</div>
 </div>
 
